--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node -L ./index.js",
+    "start": "node ./index.js",
     "test": "mocha -w ./tests/**/*.spec.js"
   },
   "author": "Henry",
